# sipsignal

./: .coverage  .gitignore  .pre-commit-config.yaml  .ruff.toml  AGENTS.md  CHANGELOG.md  GEMINI.md  LICENSE  POLITICA_DE_USO.md  QWEN.md  README.md  alembic.ini  bbalert.py  bot_main.py  botctl.sh  env.example  pyproject.toml  requirements.txt  scheduler.py  sipsignal.py
.github/workflows/: ci.yml
ai/: groq_client.py  prompts.py
bot/: __init__.py  botctl.sh  container.py  main.py  scheduler.py
bot/ai/: __init__.py  groq_client.py  prompts.py
bot/application/: get_scenario_analysis.py  get_signal_analysis.py  handle_drawdown.py  manage_journal.py  run_signal_cycle.py
bot/core/: access_manager.py  ai_logic.py  api_client.py  btc_advanced_analysis.py  config.py  database.py  loops.py
bot/db/: models.py  user_config.py  users.py
bot/domain/: __init__.py  active_trade.py  drawdown_state.py  signal.py  user_config.py
bot/handlers/: access_admin.py  access_callbacks.py  admin.py  capital_handler.py  chart_handler.py  general.py  journal_handler.py  referral_handler.py  role_change.py  role_change_callbacks.py  scenario_handler.py  setup_handler.py  signal_handler.py  signal_response_handler.py  ta.py  trading.py  user_settings.py
bot/hooks/: __init__.py  validate_tests.py
bot/infrastructure/: price_snapshot.py
bot/trading/: __init__.py  chart_capture.py  drawdown_manager.py  price_monitor.py  signal_builder.py  strategy_engine.py  technical_analysis.py
bot/utils/: __init__.py  ads_manager.py  chart_generator.py  decorators.py  file_manager.py  image_generator.py  inline_keyboards.py  logger.py  rate_limiter.py  referral_code.py  telemetry.py
core/: ai_logic.py  api_client.py  btc_advanced_analysis.py  btc_loop.py  config.py  database.py  loops.py
data-example/: users.json.example
db/: __init__.py  models.py  user_config.py  users.py
db/migrations/: 001_initial.sql
docs/: SipSignal_PRD_AppFlow_TechStack_Plan.md  SipSignal_PineScript_to_Python_TechGuide.docx.md  SipSignal_Prompts_Agente_CLI.docx.md  SipSignal_Suplemento_EstrategiaTZ_FlujoSenales.md  WORKFLOW_CYCLE.md  api-binance-publica.md  github-issues-sipsignal.md  pre-commit-hooks.md
docs/plans/: 2025-03-05-botctl-design.md  2025-03-05-botctl-implementation-plan.md  2025-03-05-chart-capture-design.md  2025-03-05-implementation-plan.md  2025-03-05-status-command-design.md  2025-04-20-security-audit-fix-design.md  2025-04-20-security-audit-fix-implementation-plan.md  2026-03-06-ci-pipeline-design.md  2026-03-06-ci-pipeline-implementation.md  2026-03-06-remove-alert-system.md  2026-03-07-active-trade-entity-design.md  (+46 more)
handlers/: admin.py  alerts.py  btc_handlers.py  capital_handler.py  chart_handler.py  general.py  journal_handler.py  setup_handler.py  signal_handler.py  signal_response_handler.py  ta.py  trading.py  user_settings.py
scripts/: migrate_json_to_postgres.py  test_chart_interactive.sh
sipsignal.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_atr.py  test_drawdown_manager.py  test_example.py  test_signal_builder.py  test_strategy_engine.py
trading/: chart_capture.py  data_fetcher.py  drawdown_manager.py  price_monitor.py  signal_builder.py  strategy_engine.py  technical_analysis.py
utils/: ads_manager.py  file_manager.py  image_generator.py  logger.py  telemetry.py  tv_helper.py  year_manager.py
(+81 files in other folders)
